# ProForge

./: .gitignore  README.md  candidates_fixture.json  dump.json  fixture.json  manage.py  pyproject.toml  requirements.txt
accounts/: forms.py  urls.py  views.py
candidates/: admin.py  forms.py  models.py  urls.py  views.py
candidates/migrations/: 0001_initial.py  0002_alter_company_description.py  0003_candidate_saved_vacancies_alter_candidate_vacancies.py  0004_candidate_current_role.py  0005_remove_vacancy_company_alter_application_vacancy_and_more.py  0006_alter_candidate_current_role.py
candidates/tests/: base_setup.py  tests_models.py  tests_views.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
employers/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
employers/migrations/: 0001_initial.py  0002_alter_company_website.py  0003_alter_vacancy_contacts_alter_vacancy_description_and_more.py
employers/tests/: base_setup.py  tests_forms.py  tests_models.py  tests_views.py
static/css/: access_denied.css  ckeditor_custom.css  login.css  signup.css  styles.css
static/js/: ckeditor_custom.js
templates/: access_denied.html  base.html
templates/candidates/: about.html  applications.html  index.html  profile.html  saved_vacancies.html  vacancies_detail.html  vacancies_list.html
templates/employers/: companies_create.html  companies_delete.html  companies_manage.html  companies_update.html  company_detail.html  company_form.html  delete_company.html  manage_companies.html  vacancies_create.html  vacancies_list.html  (+5 more)
(+7 files in other folders)
